registry/kubefirst/components/argo-workflows/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argo
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.kubefirst.dev`)
      services:
        - name: argo
          port: 80
  tls:
    secretName: argo-tls
